2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (PKL_GEN_DUP_CONTEXT): Renamed from
	PKL_GEN_SAVE_CONTEXT.
	(PKL_GEN_POP_CONTEXT): Renamed from PKL_GEN_RESTORE_CONTEXT.
	* libpoke/pkl-gen.pks: Adapt to renames.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.h (PKL_GEN_CTX_IN_TYPE): Define.
	* libpoke/pkl-gen.c (pkl_gen_ps_type_offset): Build offset type
	only in `in_type' context.
	(pkl_gen_ps_type_void): Likewise.
	(pkl_gen_ps_type_any): Likewise.
	(pkl_gen_ps_type_integral): Likewise.
	(pkl_gen_ps_type_function): Likewise.
	(pkl_gen_pr_type_array): Likewise.
	(pkl_gen_ps_type_string): Likewise.
	(pkl_gen_pr_type_struct): Likewise.
	(pkl_gen_ps_type_struct): Likewise.
	(pkl_gen_pr_struct_type_field): Likewise.
	(PKL_GEN_PUSH_CONTEXT): Define.
	* libpoke/pkl-gen.pks (array_mapper): Set the `in_type' context
	wherever appropriate.
	(array_constructor): Likewise.
	(struct_mapper): Likewise.
	(struct_constructor): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_array): Likewise.
	(pkl_gen_ps_struct): Likewise.
	(pkl_gen_ps_cast): Likewise.
	(pkl_gen_ps_isa): Likewise.

2020-12-10  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* pickles/color.pk: Use `assert` for integrity check.
	* pickles/rgb24.pk: Likewise.

2020-12-07  Jose E. Marchesi  <jemarch@gnu.org>

	* Makefile.am (SUBDIRS): Add utils/.
	* utils/Makefile.am: New file.
	* utils/pk-elfextractor.in: Renamed from pk-elfextractor.

2020-12-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (eqa): Fix lexical context handling when the
	comparison is false.

2020-12-05  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Programs): New chapter.
	(argp): New section.

2020-12-04  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/argp.pk (argp_parse): Support for --.
	* testsuite/poke.argp/argp-11.pk: New test.
	* testsuite/poke.argp/argp-12.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-12-04  Jose E. Marchesi  <jemarch@gnu.org>
